data/derived/fa15/progs/unify/prog2765.ml.out
Characters 185-197:
  if value > 9 then (1,value-10)::a
                    ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
